modal form button postion alignment footer menu text font reduced to fix mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1094,11 +1094,11 @@ h3 {
     display: none;
   }
   .service__modal__form__overlay > .close-modal {
-    margin-top: 200px;
+    margin-top: 170px;
     margin-right: 10px;
   }
   .footer__menu {
-    font-size: 0.49398rem;
+    font-size: 0.44398rem;
     width: 100%;
     justify-content: space-around;
   }
